fix z-index

--- a/src/style/scss/layouts/_login.scss
+++ b/src/style/scss/layouts/_login.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/variables" as *;
 .overlay {
-  z-index: 1000;
+  z-index: 1001;
   height: 100%;
   width: 100%;
   position: fixed;
